--- a/typescript/package.json
+++ b/typescript/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.6.0",
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
