--- a/Inter-front-end-developer/node/first-server-node/package.json
+++ b/Inter-front-end-developer/node/first-server-node/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.10",
     "@types/pg": "^8.6.4",
     "ts-node-dev": "^1.1.8",
@@ -22,6 +23,7 @@
     "express": "^4.17.2",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
   }
 }
